[package]
name = "uuid"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",      
    "v5",       
    "v3",    
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
